Use percentage to set page height instead of view height. This fixes the problem of setting too much height on mobile devices with a search bar.

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -6,12 +6,12 @@
 
 .mainContainerHeight {
   // Header height is 56 px for mobile width
-  height: calc(100vh - 56px);
+  height: calc(100% - 56px);
 }
 
 @include media-breakpoint-up(sm) {
   .mainContainerHeight {
     // Header height is 66 px for width higher than mobile
-    height: calc(100vh - 66px);
+    height: calc(100% - 66px);
   }
 }
